# deep_learing_framework

./: CMakeLists.txt
app/: cam.cpp  conv.cpp  conv_mnist.cpp  main.cpp
data/: training_data.xml
include/: ActivationLayer.h  Conv2DLayer.h  CrossEntropyLayer.h  FullyConnectedLayer.h  InputLayer.h  Layer.h  MaxPooling.h  MeanSquaredErrorLayer.h  Network.h  SGDTrainer.h  SigmoidLayer.h  SoftmaxLayer.h  Tensor.h  timer.h
src/: ActivationLayer.cpp  Conv2DLayer.cpp  CrossEntropyLayer.cpp  FullyConnectedLayer.cpp  InputLayer.cpp  MaxPooling.cpp  MeanSquaredErrorLayer.cpp  Network.cpp  SGDTrainer.cpp  SigmoidLayer.cpp  SoftmaxLayer.cpp  Tensor.cpp
